<?xml version="1.0" encoding="utf-8"?>
<com.example.budget.Views.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/username_field"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:ems="10"
        android:id="@+id/email_field"
        android:layout_gravity="center_horizontal"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/password_field"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/cornfirm_password"
        android:text=""
        android:ems="10"
        android:id="@+id/confirm_field"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"/>

</com.example.budget.Views.RegisterView>